<resources>
    <string name="app_name">WizzMate</string>
    <string name="description_app">Intelligent Travel Guide and Cost Estimator for Tourisme in Indonesia</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_account">Don’t have an account? Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Enter your password again</string>
    <string name="name">Name</string>
    <string name="term_description">By creating an account or signing  in, you agree to our Terms of Services and Privacy Policy</string>
    <string name="home">Home</string>
    <string name="cost_estimator">Cost Estimator</string>
    <string name="history">History</string>
    <string name="search">Hint</string>
    <string name="recommendation">Recommendation</string>
    <string name="estimate_cost">Estimate Your Cost</string>
</resources>